manifests/workloads/vaultwarden/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: vaultwarden
  name: vaultwarden
