manifests/workloads/vaultwarden/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vaultwarden.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: vaultwarden
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-danmanners-com-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vaultwarden.danmanners.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-danmanners-com-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.danmanners.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-cert
